--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@
     <script src="libs/handlebars-v3.0.0.js"></script>
     <script src="libs/ember-handlebars-loader-0.0.2.js"></script>
     <script src="tweeter.js"></script>
-    // <script src="models/router.js"></script>
-    // <script src="controllers/home.js"></script>
-    // <script src="controllers/application.js"></script>
+    <script src="router.js"></script>
+    <script src="store.js"></script>
+    <script src="routes/tweets.js"></script>
+
+
+    <!-- // <script src="controllers/home.js"></script>
+    // <script src="controllers/application.js"></script> -->
 
     <script>
-      EmberHandlebarsLoader.loadTemplates([]);
+      EmberHandlebarsLoader.loadTemplates(['application', 'tweets']);
     </script>
 
   </head>
   <body>
-    <div class="container">
-    </div>
   </body>
 </html>
