Add form template and link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     // <script src="controllers/application.js"></script> -->
 
     <script>
-      EmberHandlebarsLoader.loadTemplates(['application', 'tweets']);
+      EmberHandlebarsLoader.loadTemplates(['application', 'tweets','tweet-form']);
     </script>
 
   </head>
