add ability to add create new tweet.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="router.js"></script>
     <script src="store.js"></script>
     <script src="routes/tweets.js"></script>
+    <script src="controllers/tweet-form.js"></script>
 
 
     <!-- // <script src="controllers/home.js"></script>
