Add functionality of sorting by Datetime

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="store.js"></script>
     <script src="routes/tweets.js"></script>
     <script src="controllers/tweet-form.js"></script>
+    <script src="controllers/tweets.js"></script>
 
 
     <!-- // <script src="controllers/home.js"></script>
