Add ability to toggle time

--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
     <script src="router.js"></script>
     <script src="store.js"></script>
     <script src="routes/tweets.js"></script>
+    <script src="routes/tweet.js"></script>
     <script src="controllers/tweet-form.js"></script>
     <script src="controllers/tweets.js"></script>
+    <script src="controllers/tweet.js"></script>
 
 
     <!-- // <script src="controllers/home.js"></script>
     // <script src="controllers/application.js"></script> -->
 
     <script>
-      EmberHandlebarsLoader.loadTemplates(['application', 'tweets','tweet-form']);
+      EmberHandlebarsLoader.loadTemplates(['application', 'tweets', 'tweet-form', 'tweet']);
     </script>
 
   </head>
