--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Tweeter</title>
-    <link rel="stylesheet" href="/css/bootstrap-paper.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="../css/bootstrap-paper.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <script src="libs/jquery-1.11.2.js"></script>
     <script src="http://builds.emberjs.com/tags/v1.10.0/ember-template-compiler.js"></script>
     <script src="libs/ember.debug.js"></script>
